changing part of code because of tests